--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
+  "name": "dragonite-serverless",
+  "version": "0.1.0",
+  "scripts": {
+    "test": "NODE_ENV=test sls invoke test"
+  },
   "devDependencies": {
     "eslint": "^3.11.1",
-    "eslint-config-dcard": "^3.0.0"
+    "eslint-config-dcard": "^3.0.0",
+    "eslint-plugin-mocha": "^4.7.0",
+    "jscs": "^3.0.7",
+    "jscs-preset-dcard": "^1.1.0",
+    "serverless-mocha-plugin": "^1.3.1"
   },
   "dependencies": {
     "lodash": "^4.17.2",
+    "serverless-dynamodb-local": "^0.2.17",
     "uuid": "^3.0.1"
   }
 }
