--- a/serverless.yml
+++ b/serverless.yml
@@ -27,6 +27,36 @@ functions:
       - http:
           path: /index
           method: get
+  event-create:
+    handler: localEvents.create
+    events:
+      - http:
+          path: /events
+          method: post
+  event-list:
+    handler: localEvents.list
+    events:
+      - http:
+          path: /events
+          method: get
+  event-show:
+    handler: localEvents.show
+    events:
+      - http:
+          path: /events/{id}
+          method: get
+  event-update:
+    handler: localEvents.update
+    events:
+      - http:
+          path: /events/{id}
+          method: put
+  event-delete:
+    handler: localEvents.destroy
+    events:
+      - http:
+          path: /events/{id}
+          method: delete
   member-create:
     handler: members.create
     events:
@@ -121,12 +151,12 @@ resources:
       Type: AWS::DynamoDB::Table
       DeletionPolicy: Retain
       Properties:
-        TableName: events
+        TableName: local-events
         AttributeDefinitions:
-          - AttributeName: uuid
+          - AttributeName: id
             AttributeType: S
         KeySchema:
-          - AttributeName: uuid
+          - AttributeName: id
             KeyType: HASH
         ProvisionedThroughput:
           ReadCapacityUnits: 5
