--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
+  "version": "0.1.0",
+  "name": "the-oh-app-serverless",
   "devDependencies": {
     "eslint": "^3.11.1",
-    "eslint-config-dcard": "^3.0.0"
+    "eslint-config-dcard": "^3.0.0",
+    "serverless-webpack": "^1.0.0-rc.2",
+    "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
+    "aws-sdk": "^2.7.18",
     "bluebird": "^3.4.6",
     "joi": "^10.0.5",
     "lodash": "^4.17.2",
