Added the region info and refined the implementation for rendering

--- a/serverless.yml
+++ b/serverless.yml
@@ -8,6 +8,7 @@ service: the-oh-app
 provider:
   name: aws
   runtime: nodejs4.3
+  region: us-east-1
   iamRoleStatements:
   - Effect: Allow
     Action:
